# reconformal

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  fer-sadfc.ipynb  pyproject.toml  rename_plan.md
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst
docs/source/: api.rst  components.rst  conf.py  index.rst  installation.rst  quickstart.rst
reconformal/: __init__.py  __main__.py  reconformal.py
reconsadfc/: __init__.py  __main__.py  reconsadfc.py
reconsadfc-stub/: LICENSE  README.md  pyproject.toml
reconsadfc-stub/reconsadfc/: __init__.py
tests/: test_correlation_calculator.py  test_data_processor.py  test_entity_extractor.py  test_plaso_to_footprint.py  test_relationship_manager.py
